3d css rotate modify

--- a/rotate3d.html
+++ b/rotate3d.html
@@ -3,14 +3,14 @@
 <title>Rotate a image as 3D</title>
 <script type="text/javascript" src="Tethys.js"></script>
 <style type="text/css">
-/*
+
 body{
-	-webkit-perspective: 150;
-	-webkit-perspective-origin: 2px;
-}
-*/
-#card{
 	background-color:#ccc;
+}
+
+#card{
+	background-color:#f1f1f1;
+	border:10px solid #fff;
 	width:320px;
 	height:240px;
 	position: relative;
@@ -19,12 +19,6 @@ body{
 	text-align:center;
 	font-size:24px;
 	line-height:30px;
-	/*
-	-webkit-transform-origin: center bottom;
-	-webkit-transform: rotateY(10deg);
-	-webkit-transform: scale(1, 2) rotateX(30deg);
-	*/
-
 }
 
 </style>
@@ -35,26 +29,28 @@ body{
 <div id="card">FFFFFFFFFF<br />FFFFFFFF<br />FFFFFFFF<br />FFFFFFFF</div>
 
 <script type="text/javascript">
+
 /*
-Tethys.get(document.body).css('-webkit-perspective', 100);
+Tethys.get(document.body).css('-webkit-perspective', 500);
 Tethys.get(document.body).css('-webkit-perspective-origin', '2px');
 Tethys.get('#card').css('-webkit-transform-origin', 'center bottom');
-Tethys.get('#card').css('-webkit-transform', 'rotateY(10deg)');
+Tethys.get('#card').css('-webkit-transform', 'rotateY(30deg)');
 */
 
 var body = Tethys.get(document.body).css().perspective(800);
 var card = Tethys.get('#card').css();
 
-//body.perspectiveOrigin(20);
-//card.transformOrigin('center center');
+body.perspectiveOrigin(0);
+card.transformOrigin('center center');
 
-var deg = 0;
-setInterval(function(){
-	deg += 5;
-	deg = deg % 360;
-	card.rotateY(deg);
 
-}, 20);
+var d = 0;
+Tethys.animation.regist(function(){
+	d += 3;
+	d = d % 360;
+	card.rotate(d, d)
+})
+
 </script>
 
 </body>
