album.html里配置文件多了一个逗号

--- a/album.html
+++ b/album.html
@@ -154,7 +154,7 @@ album.fill('#view', {
 			target : '_blank',
 			href : data.url,
 			index : i,
-			onmouseover : function(){ fn(this.index); },
+			onmouseover : function(){ fn(this.index); }
 		}).css().opacity(.5).appendTo(parent));
 	},
 	unActive : function(f, b){
